Commit da responsividade

--- a/estilo.css
+++ b/estilo.css
@@ -3,9 +3,11 @@ html{
 }
 
 body{
+    width: 100%;
+    height: 100vh;
     background-image: url(imagens/bg.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .mosquito1{
