--- a/estilo.css
+++ b/estilo.css
@@ -4,6 +4,7 @@ html{
 
 body{
     width: 100%;
+    overflow: hidden;
     height: 100vh;
     background-image: url(imagens/bg.jpg);
     background-repeat: no-repeat;
